public/style.css
/* ... */
@media (max-width: 991px) {
    .portfolio .portfolio-item {
        flex: 0 0 45%;
        max-width:45%;
    }
    .service .service-item {
        flex: 0 0 50%;
        max-width: 50%;

    }


    .home .home-info {
        flex: 0 0 100%;
        max-width: 100%;
    }
    .home .home-img {
        display: none;
    }

    .mobile-img {
        display: block;
        width: 20vw;
        height: 150px;
        margin: 0 auto;
        margin-bottom: 60px;
    }
    .mobile-img img {
        width: 160px;
        transform: translateY(-60px);
    }
}

@media (max-width: 767px) {
    .contact .contact-info-item {
        flex: 0 0 100%;
        max-width: 100%;
        margin:30px 0;
    }

    .contact .contact-form .col-6,
    .service .service-item,
    .about .about-content .experience,
    .about .about-content .education,
    .about .about-content .skills,
    .about .about-content .personal-info {
        flex: 0 0 100%;
        max-width: 100%;
    }

    .portfolio .portfolio-item {
        flex: 0 0 70%;
        max-width: 70%;
        height: 15%;
        margin: 10px auto;
    }
    .mobile-img {
        margin-bottom: 40px;
    }
    .mobile-img img {
        width: 120px;
        transform: translateY(-40px);
    }
}

@media (max-width: 550px) {
    html {
        scroll-behavior: smooth;
    }
    h3.hello, h3.my-profession {
        font-size: 26px;
    }
    .home span.name {
        font-size: 35px;
    }
    .mobile-img {
        margin-bottom: 0;
    }
    .mobile-img img {
        width: 80px;
    }
}
@media (max-width: 500px) {
    html {
        scroll-behavior: smooth;
    }
    h3.hello, h3.my-profession {
        font-size: 23px;
    }
    .home span.name {
        display: block;
        font-size: 35px;
    }
}

#link-topo {
    position: fixed;
    right:3rem;
    bottom: -3rem;
    width: 3rem;
    height: 3rem;
    font-size: 1.5rem;
    background: var(--skin-color);
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
    border-radius: .3rem;
    box-shadow: 0 0.1rem 0.6rem #00000009;
    transition: all .7s;
    z-index:98;
    text-decoration: none;
    text-transform: none;
}

#link-topo:hover {
    bottom: 3.5rem;
}

